tests/baselines/reference/constructorReturningAPrimitive.errors.txt
constructorReturningAPrimitive.ts(6,9): error TS2322: Type 'number' is not assignable to type 'A'.
constructorReturningAPrimitive.ts(6,9): error TS2409: Return type of constructor signature must be assignable to the instance type of the class.


==== constructorReturningAPrimitive.ts (2 errors) ====
    // technically not allowed by JavaScript but we don't have a 'not-primitive' constraint
    // functionally only possible when your class is otherwise devoid of members so of little consequence in practice
    
    class A {
        constructor() {
            return 1;
            ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'A'.
            ~~~~~~
!!! error TS2409: Return type of constructor signature must be assignable to the instance type of the class.
        }
    }
    
    var a = new A();
    
    class B<T> {
        constructor() {
            var x: T;
            return x;
        }
    }
    
    var b = new B<number>();